@@ -13,6 +13,9 @@ Bugs fixed
 * #1817, #2077: suppress pep8 warnings on conf.py generated by sphinx-quickstart
 * #2407: building docs crash if document includes large data image URIs
 * #2436: Sphinx does not check version by :confval:`needs_sphinx` if loading extensions failed
+* #2397: Setup shorthandoff for turkish documents
+
+Problems with pdflatex in a Turkish document built with sphinx #2397
 
 
 Release 1.4.1 (released Apr 12, 2016)
